[gd_scene load_steps=10 format=3 uid="uid://ba3kir56m8vww"]

[ext_resource type="Script" path="res://fireball.gd" id="1_fok2r"]
[ext_resource type="Texture2D" uid="uid://dmbnw32d015qh" path="res://102-1023369_fireball-clipart-pixel-sprite-hama-beads-super-man.png" id="2_w5axs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p1j5f"]
size = Vector2(13.3333, 73.3333)

[sub_resource type="Animation" id="Animation_mbvf8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3d1aj"]
resource_name = "knifecollide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vww32"]
_data = {
"RESET": SubResource("Animation_mbvf8"),
"knifecollide": SubResource("Animation_3d1aj")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_bqqgg"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mkgkc"]
particle_flag_disable_z = true
direction = Vector3(0, 40, 0)
spread = 180.0
gravity = Vector3(0, 1000, 0)
initial_velocity_min = 500.0
initial_velocity_max = 500.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 5.0
scale_max = 5.0
color = Color(1, 0, 0, 1)
hue_variation_min = -0.08
hue_variation_max = 0.19
turbulence_noise_scale = 0.0
collision_mode = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_380bc"]
size = Vector2(8.00001, 13)

[node name="fireball" type="Area2D"]
rotation = 1.5708
scale = Vector2(3, 3)
collision_mask = 7
script = ExtResource("1_fok2r")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.03, 0.03)
texture = ExtResource("2_w5axs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.44025e-05, 0.500004)
scale = Vector2(0.6, 0.15)
shape = SubResource("RectangleShape2D_p1j5f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../GPUParticles2D")
libraries = {
"": SubResource("AnimationLibrary_vww32")
}

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_bqqgg")
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_mkgkc")
lifetime = 0.1

[node name="damagearea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="damagearea"]
position = Vector2(5.5651e-06, 0.500004)
shape = SubResource("RectangleShape2D_380bc")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="damagearea" to="." method="_on_damagearea_body_entered"]
[connection signal="body_exited" from="damagearea" to="." method="_on_damagearea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
